fix broken layout for related posts without thumbnail

--- a/themes/lazy/static/css/plain.css
+++ b/themes/lazy/static/css/plain.css
@@ -381,7 +381,8 @@ main,
   padding-top: 56.25%;
 }
 
-.post-teaser__thumbnail.no-thumbnail::after {
+.post-teaser__thumbnail.no-thumbnail::after,
+.related-posts__thumbnail.no-thumbnail::after {
   position: absolute;
   content: '(no thumbnail)';
   color: var(--light-gray);
@@ -515,7 +516,7 @@ main,
 }
 
 .related-posts__thumbnail img {
-  position: absolute;
+  position: absolute !important;
   top: 0;
   bottom: 0;
   left: 0;
